[gd_scene load_steps=6 format=3 uid="uid://d30ef3e3157lg"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_3a2cn"]
[ext_resource type="Texture2D" uid="uid://c2e8rg04pnrhi" path="res://Assets/Free-Mountain-Backgrounds-Pixel-Art9.png" id="2_pjh31"]
[ext_resource type="Theme" uid="uid://d213qxnwhb3cj" path="res://Fonts/title_theme.tres" id="3_op0y8"]
[ext_resource type="FontFile" uid="uid://gytgk1mjopxc" path="res://Fonts/rubber-biscuit.bold.ttf" id="4_mkxvd"]

[sub_resource type="Theme" id="Theme_u7pxo"]
default_font = ExtResource("4_mkxvd")
default_font_size = 22

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_3a2cn")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pjh31")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 26

[node name="GameTitle" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_op0y8")
theme_override_colors/font_color = Color(0.780392, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 4
text = "Boulder Dash"

[node name="GameOverLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u7pxo")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "GAME_OBJECTIVE_GAMEOVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_PLAY_AGAIN"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "MENU_LABEL_MAINMENU"

[node name="CurrentScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u7pxo")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "Your Curent Score: 0m
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_u7pxo")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
text = "Your HighScore: 0m
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RestartButton" to="CanvasLayer" method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenuButton" to="CanvasLayer" method="_on_main_menu_pressed"]
